--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <head>
-		<link rel="stylesheet" href='/static/style.css' />
+		<link rel="stylesheet" href='../static/style.css' />
 		<title>Hello World</title>
    </head>
 
