--- a/app/views/register.html
+++ b/app/views/register.html
@@ -16,6 +16,10 @@
     <!--Create a form that POSTs to the `/user/register` route-->
     <form class="form" action="/user/register" method="POST">
       <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+      </div>
+      <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username" placeholder="Username">
       </div>
